--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,10 +44,10 @@ dependencies {
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.2'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
     // SUPPORT
-    def v100_beta01 = '1.0.0-beta01'
+    def v100_beta01 = '1.0.0'
 
     implementation "androidx.appcompat:appcompat:$v100_beta01"
     implementation "androidx.recyclerview:recyclerview:$v100_beta01"
@@ -60,18 +60,18 @@ dependencies {
 
     // Architecture Components
     //      Lifecycle
-    def lifecycle_version = "2.0.0-beta01"
+    def lifecycle_version = "2.0.0"
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
     //kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
 
     //      Room
-    def room_version = "2.0.0-beta01"
+    def room_version = "2.0.0-rc01"
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-rxjava2:$room_version"
 
     //      Paging
-    def paging_version = "2.0.0-beta01"
+    def paging_version = "2.0.0-rc01"
     implementation "androidx.paging:paging-runtime:$paging_version"
 
     //      Navigation
@@ -114,6 +114,6 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.5'
 
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.1.0-alpha3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha3'
+    androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
 }
